# timer

./: .gitignore  ARCHITECTURE.md  LICENSE.md  README.md  index.html  package-lock.json  package.json  pyproject.toml  tailwind.config.js
deepwork_scheduler/: __init__.py  cli.py  evidence.py  models.py  render_markdown.py  render_mermaid.py  safety.py  scheduler.py
examples/: basic_day.json
extension/: package-lock.json  package.json  tailwind.config.js  vite.config.ts
extension/public/: manifest.json
extension/src/background/: service-worker.ts
extension/src/engine/: rules-engine.ts  scoring.ts
extension/src/popup/: Popup.tsx  index.html  main.tsx
extension/src/storage/: local-storage.ts
extension/src/types/: index.ts
landing/: package-lock.json  package.json
landing/src/: App.tsx
src/: App.tsx  index.css
src/auth/: authStorage.ts  display.ts
src/components/: AccountPanel.tsx  ActionButton.tsx  AuthGate.tsx  BadgeGrid.tsx  CompanionOrb.tsx  LegalPage.tsx  NextResetCard.tsx  PlanMyDay.tsx  PublicPages.tsx  RetentionViews.tsx  SessionHistory.tsx  SettingsModal.tsx  StatsCard.tsx  TimerDisplay.tsx  legalContent.ts
src/components/ui/: index.tsx
src/engine/: stateMachine.ts
src/storage/: localStorage.ts
src/types/: index.ts
src/utils/: dailyPlanner.ts
tests/: stateMachine.test.mjs  test_scheduler.py
